[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"
description = "Doing advent of code 2020 in rust, using cargo aoc"
license-file = "LICENSE"
repository = "https://github.com/RichoDemus/advent-of-code-2020"
keywords = ["aoc","advent of code"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
regex = "1.4.2"
lazy_static = "1.4.0"
